tests/samples/negative/types/noncopy_result_is_err.ax
module noncopy_result_is_err;

import std.core.result;

noncopy struct Owner {
    value: i32;
}

fn make_owner() -> Owner {
    return Owner { value: 1 };
}

fn main() -> i32 {
    var result: Result<Owner, i32> = Result.ok(make_owner());
    if move(result).is_err() {
        return 1;
    }
    return 0;
}
